Country Categories DONE

--- a/Countries/src/main/resources/application.yaml
+++ b/Countries/src/main/resources/application.yaml
@@ -12,6 +12,10 @@ spring:
     hiddenmethod:
       filter:
         enabled: true
+
+  sql:
+    init:
+      mode: never
   #  sql:
   #      init:
   #        mode: always
