--- a/Countries/src/main/resources/application.yaml
+++ b/Countries/src/main/resources/application.yaml
@@ -32,6 +32,11 @@ spring:
       hibernate:
         format_sql: true
     defer-datasource-initialization: true
+    #Cloudinary Properties
+    cloudinary:
+      api-key: 839459267175143
+      api-secret: PssfIc_66TSh6ypRCahB_9hU_vI
+      cloud-name: dw9mp2icx
   #Cloudinary Properties
   #cloudinary:
   #api-key:
